# MacResourceMonitor

./: CMakeLists.txt  README  Week1Rubric.docx  Week2Rubric.docx  Week3Rubric.docx  Week4Rubric.docx  infoCollector.c  infoCollector.h  main.c  schedule.docx  systemManagementController.c  systemManagementController.h
